syntax = "proto3";
package zetachain.zetacore.crosschain;

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

message InTxHashToCctx {
  string in_tx_hash = 1;
  string cctx_index = 2;
}
